--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -4,3 +4,12 @@
       -ms-border-radius: $radius;
           border-radius: $radius;
 }
+
+@mixin no-selection() { // запрещаем выделение текста
+  -webkit-touch-callout: none; // iOS Safari
+    -webkit-user-select: none; // Safari
+     -khtml-user-select: none; // Konqueror HTML
+       -moz-user-select: none; // Firefox
+        -ms-user-select: none; // Internet Explorer/Edge
+            user-select: none; // Non-prefixed version, currently supported by Chrome and Opera
+}
