--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -13,3 +13,14 @@
         -ms-user-select: none; // Internet Explorer/Edge
             user-select: none; // Non-prefixed version, currently supported by Chrome and Opera
 }
+
+@mixin bg-transparent() {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: 0.5;
+  z-index: -1;
+}
